[package]
name = "bmbp_util"
version = "0.0.2"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP AUTH"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp_util"
repository = "https://github.com/bmbper/bmbp_util"
documentation = "https://github.com/bmbper/bmbp_util"
[dependencies]
uuid = { version = "1.10.0", features = ["serde", "v4"] }